--- a/src/components/backTop/style.scss
+++ b/src/components/backTop/style.scss
@@ -3,7 +3,7 @@
 .back-to-top {
     position: fixed;
     display: none;
-    background: $secondary;
+    background: $primary;
     color: #fff;
     width: 44px;
     height: 44px;
@@ -17,7 +17,7 @@
     z-index: 11;
 
     &:hover {
-        color: $secondary;
+        color: $primary;
         background: #fff;
     }
 
