--- a/src/components/preloader/style.scss
+++ b/src/components/preloader/style.scss
@@ -15,7 +15,7 @@
     top: calc(50% - 30px);
     left: calc(50% - 30px);
     border: 6px solid #f2f2f2;
-    border-top: 6px solid #56bc8a;
+    border-top: 6px solid #1a96ed;
     border-radius: 50%;
     width: 60px;
     height: 60px;
